--- a/UnrealTechArt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTechArt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Classes_EditorTools/EditorTools/Public
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -696,7 +696,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=404.667 Y=170.000
-WindowSize=X=1344.000 Y=784.000
+WindowSize=X=1346.000 Y=786.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1835,19 +1835,19 @@ SubobjectEditor.TimeStamp=2024.08.31-05.15.25
 SubobjectEditor.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2024.08.31-05.15.23
 HierarchicalLODOutliner.LastCompileMethod=External
-HoudiniEngine.TimeStamp=2024.09.30-06.15.46
+HoudiniEngine.TimeStamp=2024.09.30-07.12.34
 HoudiniEngine.LastCompileMethod=External
-HoudiniEngineRuntime.TimeStamp=2024.09.30-05.56.14
+HoudiniEngineRuntime.TimeStamp=2024.09.30-07.09.40
 HoudiniEngineRuntime.LastCompileMethod=External
 Mythica.TimeStamp=2024.09.30-06.31.22
 Mythica.LastCompileMethod=External
-HoudiniLiveLink.TimeStamp=2024.09.30-06.30.58
+HoudiniLiveLink.TimeStamp=2024.09.30-07.19.00
 HoudiniLiveLink.LastCompileMethod=External
-HoudiniEngineEditor.TimeStamp=2024.09.30-06.30.14
+HoudiniEngineEditor.TimeStamp=2024.09.30-07.17.52
 HoudiniEngineEditor.LastCompileMethod=External
 UnrealTechArt.TimeStamp=2024.09.30-06.16.36
 UnrealTechArt.LastCompileMethod=External
-EditorTools.TimeStamp=2024.09.30-06.33.30
+EditorTools.TimeStamp=2024.09.30-07.15.38
 EditorTools.LastCompileMethod=External
 RD.TimeStamp=2024.09.04-22.06.03
 RD.LastCompileMethod=Unknown
@@ -1865,9 +1865,9 @@ RiderShaderInfo.TimeStamp=2024.09.04-22.09.33
 RiderShaderInfo.LastCompileMethod=Unknown
 RiderLC.TimeStamp=2024.09.04-22.09.24
 RiderLC.LastCompileMethod=Unknown
-HoudiniNiagara.TimeStamp=2024.09.30-06.16.34
+HoudiniNiagara.TimeStamp=2024.09.30-07.12.42
 HoudiniNiagara.LastCompileMethod=External
-HoudiniNiagaraEditor.TimeStamp=2024.09.30-06.31.14
+HoudiniNiagaraEditor.TimeStamp=2024.09.30-07.19.14
 HoudiniNiagaraEditor.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2024.08.31-05.15.25
 SequencerWidgets.LastCompileMethod=Unknown
